# GoldIB

./: .env.example  .gitignore  Dockerfile  GoldIB.pyproj  GoldIB.sln  README.md  docker-compose.yml  pyproject.toml  ralph-loop.ps1
.github/: copilot-instructions.md
plan/: agent-instructions.md  current-tasks.md  extension_1_DynamicPortfolioEngine.md  filetree.md  must-haves_learnings.md  plan.md  systemarchitectur.md  techstack.md
ralph-jobs/loop-1/: prompt.md  stop-hook.ps1
ralph-jobs/loop-1/sessions/: iteration-001.md
ralph-jobs/loop-2/: prompt.md  stop-hook.ps1
scripts/: ralph-loop.ps1
src/: __init__.py  api.py  config.py  logging_config.py  main.py
tests/: test_infra.py
